<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ryuta.baking.viewmodels.RecipeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            style="@style/divider_horizontal"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/actionbar"/>

        <FrameLayout
            android:id="@+id/step_detail_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/navigation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_prev"
                style="@style/step_detail_button"
                android:text="@string/step_detail_button_previous"
                android:onClick="onPreviousButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <View
                android:id="@+id/view_nav_space"
                android:layout_width="@dimen/margin_large"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_next"
                style="@style/step_detail_button"
                android:text="@string/step_detail_button_next"
                android:onClick="onNextButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_fin"
                style="@style/step_detail_button"
                android:text="@string/step_detail_button_finish"
                android:onClick="onButtonFinishClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>